--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>maven-thrift-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>Maven Thrift Plugin</name>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
 
     <prerequisites>
         <maven>2.0.6</maven>
