Set source encoding to UTF8

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
