--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.apache.thrift.tools</groupId>
     <artifactId>thrift-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>Maven Thrift Plugin</name>
-    <version>0.1.12-SNAPSHOT</version>
+    <version>0.1.12</version>
     <description>Maven Thrift Plugin that executes the thrift code generator</description>
     <url>https://github.com/dtrott/maven-thrift-plugin</url>
 
@@ -25,7 +24,8 @@
     <scm>
         <url>https://github.com/dtrott/maven-thrift-plugin</url>
         <connection>scm:git:git@github.com:dtrott/maven-thrift-plugin.git</connection>
-    </scm>
+      <tag>thrift-maven-plugin-0.1.12</tag>
+  </scm>
 
     <developers>
         <developer>
